2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c: (comp_engine_client_show):
	Fade in only for 'infoprints' - WM_WINDOW_TYPE_NOTIFICATION's

2007-07-30  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c:
	Misc cleanups
	* src/dialog_client.c:
	Fixes for making static dialogs transparent when clicked.
	* src/wm.c:
	Hopeful fixes for displaying resized input wins

2007-06-29  Matthew Allum  <mallum@openedhand.com>

	* src/composite/timeline.c: (wm_run_timelines):
	Always make sure the last frame is played.

	* src/composite/composite-engine.c: (_render_a_client):
	* src/wm.c: (wm_usage), (wm_load_config):
	Make it possible to switch off lowlighting for composite
	from the command line (on by default)

2007-06-22  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c:
	* src/composite/timeline.c: 
	Drop timeline frames if animation cant keep up. 
	Safer removal of timelines for closed clients.
	* src/dialog_client.c:
	Experiment with translucent static dialogs.

2007-06-20  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	Fix a typo.
	* src/composite/composite-engine.c:
	Unset transparency when full opacity is reached. 
	Speeds things up and avoids some odd artifacts. 

2007-06-18  Matthew Allum  <mallum@openedhand.com>

	* src/composite/composite-engine.c:
	* src/composite/timeline.c:
	* src/structs.h:
	Fixups so dialogs/overrides fade in with basic timelines

2007-06-15  Matthew Allum  <mallum@openedhand.com>

	* configure.ac:
	* src/Makefile.am:
	* src/composite-engine.c:
	* src/composite-engine.h:
	* src/composite/Makefile.am:
	* src/composite/composite-engine.c:
	* src/composite/timeline.c:
	* src/composite/timeline.h:
	* src/structs.h:
	* src/wm.c: 
	Update to require newer composite libs
	Use named pixmaps.
	Addition of rough (broken) timeline code with prototype code
	for window fade ins. 

===================== Branch Point ===============================
