@@ -385,6 +385,7 @@ main_client_move_resize(Client *c)
  * c->ewmh_sync_is_waiting = False;
  */
 
+  comp_engine_client_configure (w, c);
 }
 
 
