@@ -1,3 +1,12 @@
+2007-07-31  Matthew Allum  <mallum@openedhand.com>
+
+	* src/composite/composite-engine.c:
+	* src/dialog_client.c:
+	* src/main_client.c:
+	* src/toolbar_client.c:
+	* src/toolbar_client_alt.c:
+	Correctly handle named pixmaps and windows resizing.
+
 2007-07-30  Matthew Allum  <mallum@openedhand.com>
 
 	* src/composite/composite-engine.c: (comp_engine_client_show):
